# MBU_Center_For_Trivsel_ATS

./: .pylintrc  main.py  pyproject.toml
sub_processes/: ats_functions.py  formular_mappings.py  helper_functions.py  montly_excel_update.py  smtp_util.py
